--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
 
       <div>
-        <a class="box" href="LinkedIn link">in</a>
+        <a class="box" href="LinkedIn link" target="-blank">in</a>
       </div>
     </div>
 
@@ -37,7 +37,7 @@
       <div class="trait">
         <div class="style">
           <h3>/* Innate Value: */</h3>
-          <p>
+          <p class="small-text">
             "I'd save a rat from a cat, a cat from a dog from hunger." //
             Reflects my love for nature & my drive to solve complex,
             interconnected problems.
@@ -46,7 +46,7 @@
 
         <div class="style">
           <h3>/* personality: */</h3>
-          <p>
+          <p class="small-text">
             " I LOVE CHATTING: About economics, business strategy, or really any
             topic." // If we haven't chatted yet, just click the whatsapp button
             below: Everything interests me, time interests me the most.
@@ -55,7 +55,7 @@
 
         <div class="style">
           <h3>/* Work Style: */</h3>
-          <p>
+          <p class="small-text">
             In God we trust, everyone else must bring data." // Decision
             grounded in facts and rigorous analysis.
           </p>
