--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
 
     <div class="container">
       <div>
-        <h2>Who I Truly Am</h2>
+        <h2 class="Truly">Who I Truly Am</h2>
       </div>
-
       <div class="trait">
         <div class="style">
           <h3>/* Innate Value: */</h3>
@@ -62,6 +61,9 @@
         </div>
       </div>
       <h2>Let's Work Together</h2>
+      <div>
+        <a class="value" href="">whatsapp</a>
+      </div>
     </div>
   </body>
 </html>
