--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
       </div>
       <h2>Let's Work Together</h2>
-      <div>
+      <div class="free">
         <a class="value" href="">whatsapp</a>
       </div>
     </div>
